--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.4.3"
+  },
+    "scripts": {
+      "test": "jest"
+    }
   }
-}
