--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Indicates which folders and files Git should ignore
 # dist/
 .DS_Store
+DS_Store
 .node_modules
-.ChallengeREADME.md
+node_modules
+
 
 
  
